Updated core to new lib APIs and OpenCV2

--- a/com.ibm.streamsx.opencv/impl/src/Makefile
+++ b/com.ibm.streamsx.opencv/impl/src/Makefile
@@ -2,9 +2,9 @@
 # All Rights Reserved
 
 CPPFLAGS = -DNDEBUG=1 -D_GNU_SOURCE=1
-CXXFLAGS = -I../include -I$(OPENCV_INSTALL_PATH)/include -Wall -Werror -Wsign-compare -Wfloat-equal -Wno-unused-label -O3 -fPIC
+CXXFLAGS = -I../include -I/usr/include/opencv4 -w -Wsign-compare -Wfloat-equal -Wno-unused-label -O3 -fPIC
 CFLAGS = $(CXXFLAGS) -Wmissing-prototypes
-LDFLAGS = -L../lib -L$(OPENCV_INSTALL_PATH)/lib
+LDFLAGS = -L../lib -L/usr/lib64
 LDLIBS = -lpthread -ldl -lrt -lmicrohttpd -lcurl
 
 CC = gcc
